--- a/index.html
+++ b/index.html
@@ -1,1 +1,83 @@
-{}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy - Stumaxplan</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+        }
+        .container {
+            max-width: 900px;
+            margin: 50px auto;
+            background-color: #fff;
+            padding: 20px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+        p {
+            color: #555;
+            font-size: 1.1em;
+        }
+        ul {
+            list-style-type: disc;
+            margin-left: 20px;
+        }
+    </style>
+</head>
+<body>
+
+    <div class="container">
+        <h1>Privacy Policy</h1>
+        <p>Effective Date: January 17, 2026</p>
+
+        <p>Welcome to <strong>Stumaxplan</strong> ("we", "our", "us"). We understand the importance of privacy and are committed to protecting your personal information. This Privacy Policy outlines how we collect, use, and protect your information when you use our services.</p>
+
+        <h2>1. Information We Collect</h2>
+        <p>We collect personal information that you provide to us directly, such as when you register for an account or contact us. The types of personal information we may collect include:</p>
+        <ul>
+            <li>Full name</li>
+            <li>Email address</li>
+            <li>Phone number (if provided)</li>
+            <li>Device information (IP address, browser type, etc.)</li>
+        </ul>
+
+        <h2>2. How We Use Your Information</h2>
+        <p>The information we collect may be used for the following purposes:</p>
+        <ul>
+            <li>To provide, maintain, and improve our services</li>
+            <li>To communicate with you regarding updates, promotions, or account-related matters</li>
+            <li>To ensure the security and functionality of our services</li>
+            <li>To analyze and monitor usage patterns to improve user experience</li>
+        </ul>
+
+        <h2>3. Data Protection</h2>
+        <p>We use reasonable physical, technical, and administrative measures to safeguard your personal information. However, please be aware that no method of transmission over the internet or electronic storage is 100% secure.</p>
+
+        <h2>4. Sharing of Information</h2>
+        <p>We do not sell, rent, or share your personal information with third parties for marketing purposes. We may share your information with trusted third-party service providers to assist with business operations, but they are obligated to protect your information and only use it for the purposes specified by us.</p>
+
+        <h2>5. Cookies</h2>
+        <p>We may use cookies or similar technologies to collect data about your use of our services and improve user experience. You can control cookies through your browser settings.</p>
+
+        <h2>6. Your Rights</h2>
+        <p>You have the right to access, correct, and delete your personal information. If you would like to exercise any of these rights or have any concerns regarding your data, please contact us at <a href="mailto:mukulxxx80@gmail.com">mukulxxx80@gmail.com</a>.</p>
+
+        <h2>7. Changes to This Privacy Policy</h2>
+        <p>We may update this Privacy Policy from time to time. When we do, we will post the updated policy on this page and update the "Effective Date" at the top. We encourage you to review this policy periodically.</p>
+
+        <h2>8. Contact Us</h2>
+        <p>If you have any questions or concerns about this Privacy Policy, please contact us at:</p>
+        <p><strong>Email:</strong> <a href="mailto:mukulxxx80@gmail.com">mukulxxx80@gmail.com</a></p>
+    </div>
+
+</body>
+</html>
