--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Stumaxplan</title>
+    <title>Privacy Policy - DUTTMAX</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -39,7 +39,7 @@
         <h1>Privacy Policy</h1>
         <p>Effective Date: January 17, 2026</p>
 
-        <p>Welcome to <strong>Stumaxplan</strong> ("we", "our", "us"). We understand the importance of privacy and are committed to protecting your personal information. This Privacy Policy outlines how we collect, use, and protect your information when you use our services.</p>
+        <p>Welcome to <strong>DUTTMAX</strong> ("we", "our", "us"). We understand the importance of privacy and are committed to protecting your personal information. This Privacy Policy outlines how we collect, use, and protect your information when you use our services.</p>
 
         <h2>1. Information We Collect</h2>
         <p>We collect personal information that you provide to us directly, such as when you register for an account or contact us. The types of personal information we may collect include:</p>
